minimal chat overflow fix

--- a/index.less
+++ b/index.less
@@ -178,6 +178,13 @@ body {
       }
     }
   }
+
+  .chat-conversation {
+    @media (min-width: 1200px) {
+      height: 300px;
+      overflow: auto;
+    }
+  }
   
 }
 
